add EventCategory
