# backend/lykke/presentation/api/schemas/mappers.py
@@ -131,6 +131,7 @@ def map_calendar_entry_to_schema(
         status=entry.status,
         starts_at=entry.starts_at,
         frequency=entry.frequency,
+        category=entry.category,
         ends_at=entry.ends_at,
         created_at=entry.created_at,
         updated_at=entry.updated_at,
@@ -182,6 +183,7 @@ def map_calendar_to_schema(calendar: CalendarEntity) -> CalendarSchema:
         auth_token_id=calendar.auth_token_id,
         platform_id=calendar.platform_id,
         platform=calendar.platform,
+        default_event_category=calendar.default_event_category,
         last_sync_at=calendar.last_sync_at,
         sync_subscription=sync_subscription,
         sync_subscription_id=calendar.sync_subscription_id,
